--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3234,7 +3234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5b7e9129",
    "metadata": {},
    "outputs": [
@@ -3690,7 +3690,7 @@
     "xgb_model = XGBClassifier(\n",
     "    n_estimators=100, \n",
     "    objective='binary:logistic', \n",
-    "    tree_method='hist', # 'hist' é rápido e eficiente\n",
+    "    tree_method='hist', \n",
     "    random_state=42\n",
     ")\n",
     "\n",
@@ -3699,7 +3699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "8e5bcb59",
    "metadata": {},
    "outputs": [
@@ -3724,18 +3724,16 @@
    "source": [
     "xgb_predictions = xgb_model.predict(X_test)\n",
     "\n",
-    "# 4. Calcular Accuracy\n",
     "xgb_accuracy = accuracy_score(y_test, xgb_predictions)\n",
     "print(f\"XGBoost model estimated accuracy: {xgb_accuracy:.2%}\")\n",
     "\n",
-    "# 5. Probabilidades para o ROC (Agora o predict_proba JÁ FUNCIONA!)\n",
     "xgb_y_probs = xgb_model.predict_proba(X_test)[:, 1]\n",
     "\n",
     "# 6. Calcular métricas ROC\n",
     "xgb_fpr, xgb_tpr, thresholds = roc_curve(y_test, xgb_y_probs)\n",
     "xgb_auc_score = roc_auc_score(y_test, xgb_y_probs)\n",
     "\n",
-    "# 7. Plot (Corrigindo a variável rf_fpr para xgb_fpr)\n",
+    "#\n",
     "plt.figure(figsize=(8, 6))\n",
     "plt.plot(xgb_fpr, xgb_tpr, color='blue', label=f'XGB (AUC = {xgb_auc_score:.2f})') # <--- CORRIGIDO AQUI\n",
     "plt.plot([0, 1], [0, 1], color='red', linestyle='--', label='Random (AUC = 0.50)')\n",
